--- a/webform_shs.info.yml
+++ b/webform_shs.info.yml
@@ -4,5 +4,5 @@ description: 'Integrates Simple Hierarchical Select module with Webform.'
 dependencies:
   - webform:webform (>=8.x-5.x)
   - shs:shs (>= 1.0-alpha3)
-core: 8.x
+core_version_requirement: ^8 || ^9
 package: Webform
