--- a/composer.json
+++ b/composer.json
@@ -2,10 +2,10 @@
   "name": "drupal/webform_shs",
   "description": "Provides an SHS term select element for webform",
   "type": "drupal-module",
-  "homepage": "http://drupal.org/project/webform_shs",
+  "homepage": "https://drupal.org/project/webform_shs",
   "authors": [
     {
-      "name": "Cornel Andreev",
+      "name": "hugronaphor",
       "homepage": "https://www.drupal.org/u/hugronaphor",
       "role": "Maintainer"
     },
@@ -17,8 +17,10 @@
   ],
   "support": {
     "issues": "https://www.drupal.org/project/issues/webform_shs",
-    "source": "http://cgit.drupalcode.org/webform_shs"
+    "source": "https://git.drupalcode.org/project/webform_shs"
   },
   "license": "GPL-2.0+",
-  "require": {}
+    "require": {
+        "drupal/core": "^8.8 || ^9"
+    }
 }
