Remove strict versions requirements

--- a/webform_shs.info.yml
+++ b/webform_shs.info.yml
@@ -2,7 +2,7 @@ name: 'Webform Simple Hierarchical Select'
 type: module
 description: 'Integrates Simple Hierarchical Select module with Webform.'
 dependencies:
-  - webform:webform (>=8.x-5.x)
-  - shs:shs (>= 1.0-alpha3)
+  - webform:webform
+  - shs:shs
 core_version_requirement: ^8 || ^9
 package: Webform
